# voyx

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  test-metal.sh  voyx.sh
lib/: cpm.cmake  cxxopts.cmake  dr_libs.cmake  easyloggingpp.cmake  fmt.cmake  metal.cmake  mlinterp.cmake  opencl.cmake  openmp.cmake  pocketfft.cmake  qcustomplot.cmake  qt.cmake  rtaudio.cmake  rtmidi.cmake  thread_pool.cmake
lib/cxxopts/: README
lib/easyloggingpp/: CMakeLists.txt  README
lib/fmt/: CMakeLists.txt  README
lib/mlinterp/: CMakeLists.txt  README.md
lib/pocketfft/: CMakeLists.txt
lib/qcustomplot/: CMakeLists.txt  README  qcustomplot.h
lib/qt/: CMakeLists.txt
lib/readerwriterqueue/: CMakeLists.txt  README
lib/rtaudio/: CMakeLists.txt  README
lib/rtmidi/: CMakeLists.txt  README
lib/thread_pool/: CMakeLists.txt  README
lib/wildcards/: CMakeLists.txt  README
src/test-metal/: Metal.h  add.metal  main.cpp  test-metal.cmake  test.metal
src/voyx/: CMakeLists.txt  Format.h  Header.h  Metal.h  Source.h  Voyx.cpp  Voyx.h  main.cpp  voyx.cmake
src/voyx/ALG/: FFT.h  Lifter.h  STFT.h
src/voyx/DSP/: AsyncPipeline.h  BypassPipeline.cpp  BypassPipeline.h  InverseSynthPipeline.cpp  InverseSynthPipeline.h  MetalTestPipeline.cpp  MetalTestPipeline.h  Pipeline.h  SdftPipeline.cpp  SdftPipeline.h  SdftTestPipeline.h  StftPipeline.cpp  StftPipeline.h  SyncPipeline.h  TestPipeline.cpp  TestPipeline.h  VoiceSynthPipeline.cpp  VoiceSynthPipeline.h
src/voyx/ETC/: Assert.h  Convert.Array.h  Convert.Common.h  Convert.DFT.h  Convert.Interpolation.h  Convert.MIDI.h  Convert.Type.h  Convert.h  FFT.h  FIFO.h  Format.h  Lifter.h  Logger.h  Matrix.h  SDFT.h  STFT.h  Timer.h  Vector.h  Vocoder.cpp  Vocoder.h  WAV.cpp  WAV.h  Window.h
src/voyx/IO/: AudioProbe.cpp  AudioProbe.h  AudioSink.cpp  AudioSink.h  AudioSource.cpp  AudioSource.h  FIFO.h  FileSink.cpp  FileSink.h  FileSource.cpp  FileSource.h  MidiObserver.cpp  MidiObserver.h  MidiProbe.cpp  NullSink.cpp  NullSink.h  NullSource.cpp  NullSource.h  Probe.cpp  Probe.h  SineSource.cpp  SineSource.h  Sink.h  Source.h
src/voyx/MEM/: DefaultMemoryPool.h  MemoryPool.h  MetalMemoryPool.cpp  MetalMemoryPool.h
src/voyx/METAL/: SDFT.h  SDFT.metal  Voyx.metal
src/voyx/UI/: Plot.h  QPlot.cpp  QPlot.h
src/voyx/alg/: CepstralPitchDetector.h  FFT.h  Lifter.h  MSDFT.h  NaivePitchTracking.h  Oscillator.h  SDFT.h  SPSI.h  SRC.h  STFT.h  SpectralPitchDetector.h  Vocoder.h  Window.h  Wobbulator.h
src/voyx/alg_tmp/: SDFT.h
src/voyx/dsp/: AsyncPipeline.h  BypassPipeline.cpp  BypassPipeline.h  InverseSynthPipeline.cpp  InverseSynthPipeline.h  MetalTestPipeline.cpp  MetalTestPipeline.h  OpenclTestPipeline.cpp  OpenclTestPipeline.h  Pipeline.h  RobotPipeline.cpp  RobotPipeline.h  SdftPipeline.cpp  SdftPipeline.h  SdftTestPipeline.cpp  SdftTestPipeline.h  SlidingVoiceSynthPipeline.cpp  SlidingVoiceSynthPipeline.h  StftPipeline.cpp  StftPipeline.h  StftTestPipeline.cpp  StftTestPipeline.h  SyncPipeline.h  VoiceSynthPipeline.cpp  VoiceSynthPipeline.h
src/voyx/dsp_tmp/: MetalTestPipeline.cpp  StftPipeline.cpp  StftPipeline.h  StftTestPipeline.cpp  SyncPipeline.h
src/voyx/etc/: Convert.Array.h  Convert.Common.h  Convert.Complex.h  Convert.DFT.h  Convert.MIDI.h  Convert.String.h  Convert.h  Logger.h  Matrix.h  Timer.h  Vector.h  WAV.cpp
src/voyx/etc_tmp/: Assert.h  Convert.Common.h  Convert.MIDI.h  Convert.h  Timer.h  WAV.h
src/voyx/io/: AudioProbe.cpp  AudioSink.cpp  AudioSink.h  AudioSource.cpp  AudioSource.h  FileSink.cpp  FileSink.h  FileSource.cpp  FileSource.h  MidiObserver.cpp  MidiObserver.h  MidiProbe.cpp  NoiseSource.cpp  NoiseSource.h  NullSink.cpp  NullSink.h  NullSource.cpp  NullSource.h  SineSource.cpp  SineSource.h  SweepSource.cpp  SweepSource.h
src/voyx/io_tmp/: FileSink.cpp  FileSource.cpp  MidiObserver.cpp  MidiProbe.h  Sink.h
src/voyx/metal/: Complex.metal
src/voyx/sign/: Generator.h  Noise.h  Oscillator.h  Wobbulator.h
src/voyx/ui/: QPlot.cpp  QPlot.h
src/voyx/ui_tmp/: QPlot.cpp  QPlot.h
